feat: Supports multi-service deployment

--- a/config/config.template.yaml
+++ b/config/config.template.yaml
@@ -1,8 +1,8 @@
-deploy:
-  save_path: /opt/basic
+deploys:
+- save_path: /opt/basic
   exec_file: basic
   service_name: basic.service
-github:
   owner: writethesky
   repo: basic
+github:
   token: xxx
